# Chatbot-streamlit

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  env.test  pyproject.toml
src/chat_ui_streamlit/core/: config.py  constants.py
src/chat_ui_streamlit/ui/: Homepage.py
src/chat_ui_streamlit/ui/components/: chat_component.py  header_component.py  home_component.py  sidebar_component.py
src/chat_ui_streamlit/ui/pages/: CAT_Deep_Research.py
src/chat_ui_streamlit/ui/styles/: chat.css  header.css  sidebar.css
